--- a/Index.html
+++ b/Index.html
@@ -72,7 +72,22 @@
         // ==========================================
         // DIN FIREBASE CONFIG:
         // ==========================================
-        const myCustomFirebaseConfig = null; 
+        const myCustomFirebaseConfig = {
+
+    apiKey: "AIzaSyAZkTPNGWC29HQ9fz4Zr8vK8Cfb4VYV6YA",
+
+    authDomain: "cleaning-3064f.firebaseapp.com",
+
+    projectId: "cleaning-3064f",
+
+    storageBucket: "cleaning-3064f.firebasestorage.app",
+
+    messagingSenderId: "1079173197088",
+
+    appId: "1:1079173197088:web:88bc7ef22bb1c1cfebfb45"
+
+  };
+ 
 
         const firebaseConfig = (typeof __firebase_config !== 'undefined') 
             ? JSON.parse(__firebase_config) 
@@ -406,4 +421,5 @@
         render();
     </script>
 </body>
+
 </html>
