--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>StädKoll</title>
+    <title>Städlista</title>
     
     <!-- PWA & Mobilinställningar -->
     <link rel="manifest" href="manifest.json">
@@ -365,3 +365,4 @@
     </script>
 </body>
 </html>
+
