--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
                 }}
             ],
             seasonal: [
-                { id: 'spring', name: 'Vår (Mar/Apr)', color: '#10b981', tasks: ['Putsa alla fönster', 'Balkongen: Golv & möbler', 'Plantera om växter', 'Tvätta täcken & kuddar', 'Undan vinter / Fram sommar'], deep: ['Tvätta/Steama soffan', 'Städa under soffa & matta', 'Städa under stora möbler', 'Piska matta', 'Tvätta gardiner', 'Rensa förråd'] },
+                { id: 'spring', name: 'Vår (Mar/Apr)', color: '#10b981', tasks: ['Putsa alla fönster', 'Balkongen: Golv & möbler', 'Olja fönster och dörrar', 'Plantera om växter', 'Tvätta täcken & kuddar', 'Undan vinter / Fram sommar'], deep: ['Tvätta/Steama soffan', 'Städa under soffa & matta', 'Städa under stora möbler', 'Piska matta', 'Tvätta gardiner', 'Rensa förråd'] },
                 { id: 'summer', name: 'Sommar (Jun/Jul)', color: '#0ea5e9', tasks: ['Torka av Väggar & Dörrar', 'Lampor', 'Elementen'], deep: ['Städa under maskiner', 'Sortera bort prylar', 'Städa skåp tvättstuga', 'Städa skåp badrum', 'Borsta fogar/hörn', 'Avkalka dusch'] },
-                { id: 'autumn', name: 'Höst (Sep/Okt)', color: '#f97316', tasks: ['Putsa fönster & städa balkong', 'Packa undan möbler', 'Tvätta täcken & kuddar', 'Undan sommar/Fram vinter', 'Hall: Slask-prep'], deep: ['Städa garderoben', 'Sortera bort kläder', 'Städa byrå & hyllor', 'Städa klädkammare', 'Städa extrarum noggrant'] },
+                { id: 'autumn', name: 'Höst (Sep/Okt)', color: '#f97316', tasks: ['Lufta element', 'Putsa fönster & städa balkong', 'Packa undan möbler', 'Tvätta täcken & kuddar', 'Undan sommar/Fram vinter', 'Hall: Slask-prep'], deep: ['Städa garderoben', 'Sortera bort kläder', 'Städa byrå & hyllor', 'Städa klädkammare', 'Städa extrarum noggrant'] },
                 { id: 'winter', name: 'Vinter (Dec/Jan)', color: '#6366f1', tasks: ['Kontrollera lister', 'Frosta av frysen'], deep: ['Städa i köksskåpen', 'Sortera bort kökssaker', 'Städa bakom kyl/ugn', 'Bokhyllor: Avtorkning', 'Garderob: Rensa kläder'] }
             ],
-            quarterly: ['Fläktfilter', 'Ugnen', 'Kylen', 'Vattenlås', 'Madrasskydd', 'Gör rent madrassen', 'Soffa & fåtölj', 'Byt tandborste', 'Avkalka']
+            quarterly: ['Fläktfilter', 'Brandlarm och brandsläckare', 'Ugnen', 'Kylen', 'Vattenlås', 'Madrasskydd', 'Gör rent madrassen', 'Soffa & fåtölj', 'Byt tandborste', 'Avkalka']
         };
 
         const getSuggestedWeek = () => {
@@ -673,3 +673,4 @@
     </script>
 </body>
 </html>
+
